--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+  background-color: #f3f3f3;
+  margin: 0 auto;
+}
+
 header {
   display: flex;
   margin: 40px;
@@ -10,11 +15,6 @@ header {
 .avatar {
   border-right: 1px solid rgb(25, 25, 26);
   margin-right: 5px;
-}
-
-body {
-  margin: auto;
-  background-color: #f3f3f3;
 }
 
 h1 {
@@ -33,7 +33,7 @@ ul {
 main {
   margin: 40px;
   margin-top: 0;
-
+  margin-bottom: 10px;
   border: 1px solid rgb(25, 25, 26);
 }
 
@@ -44,4 +44,24 @@ p {
 
 .start {
   margin-top: 2px;
+}
+
+footer {
+  height: 50px;
+  background-color: #c2bdbd;
+  margin: 0 auto;
+}
+
+.footer__items {
+  display: flex;
+  align-items: center;
+  margin-left: 40px;
+}
+
+.rs__logo {
+  width: 70px;
+}
+
+.github__info {
+  padding-left: 30px;
 }
